@@ -1,4 +1,21 @@
 #!/bin/sh
+
+# Clean all traces of PostgreSQL data/configuration from the current system.
+# Use with caution, for development/testing only! (This is not installed into
+# packages.)
+#
+# (C) 2008-2009 Martin Pitt <mpitt@debian.org>
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+
 [ `id -u` = 0 ] || SUDO=sudo
 for v in 7.4 8.0 8.1 8.2 8.3 8.4; do
     i=/etc/init.d/postgresql-$v
