@@ -3,7 +3,17 @@
 # Create new PostgreSQL cluster or integrate an existing data directory into
 # the postgresql-common infrastructure.
 #
-# (C) 2005 Martin Pitt <mpitt@debian.org>
+# (C) 2005-2009 Martin Pitt <mpitt@debian.org>
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
 
 use lib '/usr/share/postgresql-common';
 use PgCommon;
