@@ -3,7 +3,17 @@
 # Create dictionaries and affix rules palatable for PostgreSQL, using installed
 # myspell and hunspell dictionaries.
 #
-# (C) 2008 Martin Pitt <mpitt@debian.org>
+# (C) 2008-2009 Martin Pitt <mpitt@debian.org>
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
 
 my @srcdirs = ('/usr/share/hunspell', '/usr/share/myspell/dicts');
 my $cachedir = '/var/cache/postgresql/dicts';
